--- a/WhoIsHome/WhoIsHome.csproj
+++ b/WhoIsHome/WhoIsHome.csproj
@@ -5,5 +5,10 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="Galaxus.Functional" Version="4.2.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+    </ItemGroup>
 
 </Project>
