--- a/WhoIsHome.Host/WhoIsHome.Host.csproj
+++ b/WhoIsHome.Host/WhoIsHome.Host.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\WhoIsHome.Infrastructure\WhoIsHome.Infrastructure.csproj" />
       <ProjectReference Include="..\WhoIsHome.WebApi\WhoIsHome.WebApi.csproj" />
     </ItemGroup>
 
