--- a/WhoIsHome.Host/appsettings.json
+++ b/WhoIsHome.Host/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Firebase": {
+    "Firestore" : {
+      "Project_id" : "whoshome-9856f"
+    }
+  },
   "AllowedHosts": "*"
 }
