--- a/WhoIsHome.Infrastructure/WhoIsHome.Infrastructure.csproj
+++ b/WhoIsHome.Infrastructure/WhoIsHome.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="Galaxus.Functional" Version="4.2.1" />
+        <PackageReference Include="Google.Cloud.Firestore" Version="3.8.0"/>
     </ItemGroup>
 
 </Project>
