--- a/WhoIsHome/WhoIsHome.csproj
+++ b/WhoIsHome/WhoIsHome.csproj
@@ -9,6 +9,8 @@
     <ItemGroup>
         <PackageReference Include="Galaxus.Functional" Version="4.2.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
+        <PackageReference Include="Google.Cloud.Firestore" Version="3.8.0"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     </ItemGroup>
 
 </Project>
