--- a/WhoIsHome.WebApi/WhoIsHome.WebApi.csproj
+++ b/WhoIsHome.WebApi/WhoIsHome.WebApi.csproj
@@ -15,4 +15,8 @@
       <ProjectReference Include="..\WhoIsHome\WhoIsHome.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+    </ItemGroup>
+
 </Project>
