--- a/WhoIsHome.Host/WhoIsHome.Host.csproj
+++ b/WhoIsHome.Host/WhoIsHome.Host.csproj
@@ -5,6 +5,7 @@
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>WhoIsHome.WebApi</RootNamespace>
+        <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     </PropertyGroup>
 
     <ItemGroup>
