--- a/WhoIsHome/WhoIsHome.csproj
+++ b/WhoIsHome/WhoIsHome.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Google.Cloud.Firestore" Version="3.8.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.8" />
     </ItemGroup>
     
     <ItemGroup>
