--- a/WhoIsHome/WhoIsHome.csproj
+++ b/WhoIsHome/WhoIsHome.csproj
@@ -7,10 +7,14 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="Galaxus.Functional" Version="4.2.1" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Google.Cloud.Firestore" Version="3.8.0"/>
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.8" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <ProjectReference Include="..\WhoIsHome.DataAccess\WhoIsHome.DataAccess.csproj" />
     </ItemGroup>
 
 </Project>
