--- a/WhoIsHome.Host/appsettings.json
+++ b/WhoIsHome.Host/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSettings": {
+    "Issuer": "WhoIsHome",
+    "Audience": "WhoIsHome.Android",
+    "ExpiresInMinutes": 60
+  },
   "AllowedHosts": "*"
 }
