--- a/WhoIsHome.WebApi/WhoIsHome.WebApi.csproj
+++ b/WhoIsHome.WebApi/WhoIsHome.WebApi.csproj
@@ -7,7 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.1.2" />
+        <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.1.2" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
 
     <ItemGroup>
