connection string added to db context

--- a/WhoIsHome.Host/appsettings.Development.json
+++ b/WhoIsHome.Host/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MySql": "Server=localhost;Database=local-whoishome;User=root;Password=1234;"
   }
 }
