--- a/WhoIsHome.Host/appsettings.json
+++ b/WhoIsHome.Host/appsettings.json
@@ -10,5 +10,8 @@
     "Audience": "WhoIsHome.Android",
     "ExpiresInMinutes": 60
   },
+  "ConnectionStrings": {
+    "MySql": "Server=${MYSQL_SERVER};Port=${MYSQL_PORT};Database=${MYSQL_DATABASE};User=${MYSQL_USER};Password=${MYSQL_PASSWORD};"
+  },
   "AllowedHosts": "*"
 }
