--- a/WhoIsHome.DataAccess/WhoIsHome.DataAccess.csproj
+++ b/WhoIsHome.DataAccess/WhoIsHome.DataAccess.csproj
@@ -8,6 +8,10 @@
 
     <ItemGroup>
       <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.5" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
