--- a/WhoIsHome.Test/WhoIsHome.Test.csproj
+++ b/WhoIsHome.Test/WhoIsHome.Test.csproj
@@ -11,11 +11,18 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.12.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.10" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
         <PackageReference Include="NUnit" Version="3.13.3"/>
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1"/>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\WhoIsHome.DataAccess\WhoIsHome.DataAccess.csproj" />
+      <ProjectReference Include="..\WhoIsHome.Shared\WhoIsHome.Shared.csproj" />
+      <ProjectReference Include="..\WhoIsHome\WhoIsHome.csproj" />
     </ItemGroup>
 
 </Project>
