add tests to sln

--- a/test/WhoIsHome.Test/WhoIsHome.Test.csproj
+++ b/test/WhoIsHome.Test/WhoIsHome.Test.csproj
@@ -20,9 +20,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\WhoIsHome.DataAccess\WhoIsHome.DataAccess.csproj" />
-      <ProjectReference Include="..\WhoIsHome.Shared\WhoIsHome.Shared.csproj" />
-      <ProjectReference Include="..\WhoIsHome\WhoIsHome.csproj" />
+      <ProjectReference Include="..\..\src\WhoIsHome.Shared\WhoIsHome.Shared.csproj" />
+      <ProjectReference Include="..\..\src\WhoIsHome\WhoIsHome.csproj" />
     </ItemGroup>
 
 </Project>
