--- a/test/WhoIsHome.Test/WhoIsHome.Test.csproj
+++ b/test/WhoIsHome.Test/WhoIsHome.Test.csproj
@@ -20,8 +20,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\WhoIsHome.Shared\WhoIsHome.Shared.csproj" />
-      <ProjectReference Include="..\WhoIsHome\WhoIsHome.csproj" />
+      <ProjectReference Include="..\..\src\WhoIsHome.Shared\WhoIsHome.Shared.csproj" />
+      <ProjectReference Include="..\..\src\WhoIsHome\WhoIsHome.csproj" />
     </ItemGroup>
 
 </Project>
