--- a/src/WhoIsHome.DataAccess/WhoIsHome.DataAccess.csproj
+++ b/src/WhoIsHome.DataAccess/WhoIsHome.DataAccess.csproj
@@ -18,4 +18,8 @@
       <ProjectReference Include="..\WhoIsHome.Shared\WhoIsHome.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Migrations\" />
+    </ItemGroup>
+
 </Project>
