--- a/src/WhoIsHome.WebApi/WhoIsHome.WebApi.csproj
+++ b/src/WhoIsHome.WebApi/WhoIsHome.WebApi.csproj
@@ -14,4 +14,8 @@
       <ProjectReference Include="..\WhoIsHome\WhoIsHome.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="QueryServices\" />
+    </ItemGroup>
+
 </Project>
