--- a/test/WhoIsHome.Test/WhoIsHome.Test.csproj
+++ b/test/WhoIsHome.Test/WhoIsHome.Test.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1"/>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
         <PackageReference Include="Moq" Version="4.20.72" />
+        <PackageReference Include="Moq.EntityFrameworkCore" Version="8.0.1.7" />
     </ItemGroup>
 
     <ItemGroup>
