--- a/src/WhoIsHome.Host/appsettings.json
+++ b/src/WhoIsHome.Host/appsettings.json
@@ -6,6 +6,14 @@
       "Microsoft.EntityFrameworkCore.Database": "Warning"
     }
   },
+  "Sentry": {
+    "MaxRequestBodySize": "Always",
+    "MinimumBreadcrumbLevel": "Information",
+    "MinimumEventLevel": "Warning",
+    "AttachStackTrace": true,
+    "Debug": false,
+    "DiagnosticLevel": "Error"
+  },
   "JwtSettings": {
     "Issuer": "WhoIsHome",
     "Audience": "WhoIsHome.Android",
