--- a/src/WhoIsHome.Host/WhoIsHome.Host.csproj
+++ b/src/WhoIsHome.Host/WhoIsHome.Host.csproj
@@ -11,7 +11,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6"/>
-        <PackageReference Include="Sentry" Version="5.5.1" />
+        <PackageReference Include="Sentry.AspNetCore" Version="5.5.1" />
         <PackageReference Include="Sentry.Extensions.Logging" Version="5.5.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.1" />
