--- a/src/WhoIsHome.Host/appsettings.json
+++ b/src/WhoIsHome.Host/appsettings.json
@@ -10,9 +10,9 @@
     "MaxRequestBodySize": "Always",
     "MinimumBreadcrumbLevel": "Information",
     "MinimumEventLevel": "Warning",
+    "DiagnosticLevel": "Error",
     "AttachStackTrace": true,
-    "Debug": false,
-    "DiagnosticLevel": "Error"
+    "Debug": false
   },
   "JwtSettings": {
     "Issuer": "WhoIsHome",
