--- a/src/WhoIsHome.Host/appsettings.json
+++ b/src/WhoIsHome.Host/appsettings.json
@@ -20,5 +20,9 @@
     "Audience": "WhoIsHome.Android",
     "ExpiresInMinutes": 60
   },
+  "DbCleanUp": {
+    "DayOfWeek": "Sunday",
+    "Time": "02:00:00"
+  },
   "AllowedHosts": "*"
 }
