more info and options

--- a/src/WhoIsHome.Host/appsettings.json
+++ b/src/WhoIsHome.Host/appsettings.json
@@ -22,7 +22,8 @@
   },
   "DbCleanUp": {
     "DayOfWeek": "Sunday",
-    "Time": "02:00:00"
+    "Time": "02:00:00",
+    "DaysToKeep": 90
   },
   "AllowedHosts": "*"
 }
