--- a/src/WhoIsHome.Host/appsettings.json
+++ b/src/WhoIsHome.Host/appsettings.json
@@ -7,6 +7,7 @@
     }
   },
   "Sentry": {
+    "Dsn": "",
     "Release": "1.3.2",
     "MaxRequestBodySize": "Always",
     "MinimumBreadcrumbLevel": "Information",
