--- a/src/WhoIsHome.Host/WhoIsHome.Host.csproj
+++ b/src/WhoIsHome.Host/WhoIsHome.Host.csproj
@@ -17,6 +17,7 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.1" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.16" />
     </ItemGroup>
 
     <ItemGroup>
