--- a/src/WhoIsHome/WhoIsHome.csproj
+++ b/src/WhoIsHome/WhoIsHome.csproj
@@ -14,9 +14,29 @@
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.1.2" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
     </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.16" />
+        <PackageReference Include="MySql.EntityFrameworkCore" Version="8.0.5"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.5">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+    </ItemGroup>
     
     <ItemGroup>
-      <ProjectReference Include="..\WhoIsHome.External\WhoIsHome.External.csproj" />
+      <ProjectReference Include="..\WhoIsHome.Shared\WhoIsHome.Shared.csproj" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="External\" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <EmbeddedResource Update="External\Translation\Resource.resx">
+        <Generator>ResXFileCodeGenerator</Generator>
+        <LastGenOutput>Resource.Designer.cs</LastGenOutput>
+      </EmbeddedResource>
     </ItemGroup>
 
 </Project>
