--- a/src/WhoIsHome/WhoIsHome.csproj
+++ b/src/WhoIsHome/WhoIsHome.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.8" />
         <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="7.1.2" />
         <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.1.2" />
