--- a/src/WhoIsHome/WhoIsHome.csproj
+++ b/src/WhoIsHome/WhoIsHome.csproj
@@ -31,6 +31,7 @@
     
     <ItemGroup>
       <Folder Include="External\" />
+      <Folder Include="External\Database\Migrations\" />
     </ItemGroup>
     
     <ItemGroup>
