--- a/src/WhoIsHome.Host/WhoIsHome.Host.csproj
+++ b/src/WhoIsHome.Host/WhoIsHome.Host.csproj
@@ -9,19 +9,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
-        <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.16" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.6"/>
-        <PackageReference Include="Sentry.AspNetCore" Version="5.5.1" />
-        <PackageReference Include="Sentry.Extensions.Logging" Version="5.5.1" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.7.1" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.23" />
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.23" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.23"/>
+        <PackageReference Include="Sentry.AspNetCore" Version="6.0.0" />
+        <PackageReference Include="Sentry.Extensions.Logging" Version="6.0.0" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.4" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.1" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.16" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.23" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\WhoIsHome.WebApi\WhoIsHome.WebApi.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="DataProtectionKeys\Migrations\" />
     </ItemGroup>
 
 </Project>
