--- a/src/WhoIsHome.Host/WhoIsHome.Host.csproj
+++ b/src/WhoIsHome.Host/WhoIsHome.Host.csproj
@@ -1,30 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
     <PropertyGroup>
-        <TargetFramework>net10.0</TargetFramework>
-        <Nullable>enable</Nullable>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <RootNamespace>WhoIsHome.Host</RootNamespace>
         <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
-        <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="10.0.2" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.2"/>
-        <PackageReference Include="Sentry.AspNetCore" Version="6.0.0" />
-        <PackageReference Include="Sentry.Extensions.Logging" Version="6.0.0" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="10.1.0"/>
-        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="10.1.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.2" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer"/>
+        <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
+        <PackageReference Include="Sentry.AspNetCore"/>
+        <PackageReference Include="Sentry.Extensions.Logging"/>
+        <PackageReference Include="Swashbuckle.AspNetCore"/>
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\WhoIsHome.WebApi\WhoIsHome.WebApi.csproj" />
     </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="DataProtectionKeys\Migrations\" />
-    </ItemGroup>
-
 </Project>
