--- a/test/WhoIsHome.Test/WhoIsHome.Test.csproj
+++ b/test/WhoIsHome.Test/WhoIsHome.Test.csproj
@@ -1,28 +1,22 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <TargetFramework>net10.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentAssertions" Version="8.8.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1"/>
-        <PackageReference Include="NUnit" Version="4.4.0"/>
-        <PackageReference Include="NUnit3TestAdapter" Version="6.1.0"/>
-        <PackageReference Include="NUnit.Analyzers" Version="4.11.2"/>
-        <PackageReference Include="coverlet.collector" Version="6.0.4"/>
-        <PackageReference Include="Moq" Version="4.20.72" />
-        <PackageReference Include="Moq.EntityFrameworkCore" Version="10.0.0" />
+        <PackageReference Include="FluentAssertions" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk"/>
+        <PackageReference Include="NUnit"/>
+        <PackageReference Include="NUnit3TestAdapter"/>
+        <PackageReference Include="NUnit.Analyzers"/>
+        <PackageReference Include="coverlet.collector"/>
+        <PackageReference Include="Moq"/>
+        <PackageReference Include="Moq.EntityFrameworkCore"/>
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\..\src\WhoIsHome.Shared\WhoIsHome.Shared.csproj" />
       <ProjectReference Include="..\..\src\WhoIsHome\WhoIsHome.csproj" />
     </ItemGroup>
-
 </Project>
