--- a/src/WhoIsHome.Host/appsettings.Development.json
+++ b/src/WhoIsHome.Host/appsettings.Development.json
@@ -16,7 +16,7 @@
   "DB": {
     "HOST" : "localhost",
     "DATABASE": "local-WohIsHome",
-    "USER": "root",
+    "USER": "postgres",
     "PASSWORD": "1234"
   }
 }
