--- a/src/WhoIsHome.Host/appsettings.Development.json
+++ b/src/WhoIsHome.Host/appsettings.Development.json
@@ -15,7 +15,7 @@
   "API_KEY" : "dev1234",
   "DB": {
     "HOST" : "localhost",
-    "DATABASE": "local-WohIsHome",
+    "DATABASE": "local-WhoIsHome",
     "USER": "postgres",
     "PASSWORD": "1234"
   }
